<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
            layout="@layout/my_toolbar"
            android:id="@+id/my_toolbar_about" tools:layout_editor_absoluteY="40dp" tools:layout_editor_absoluteX="0dp">

    </include>


    <TextView
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textAlignment="center"
            android:textSize="36sp" android:textColor="@color/colorAccent" android:textStyle="bold"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/diet" android:id="@+id/imageView4"/>
    <TextView
            android:text="@string/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:textAlignment="center"
            android:textStyle="italic" android:textColor="@color/colorPrimary" android:textSize="22dp"
            android:layout_margin="4dp" android:background="@color/colorBackground"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView" android:contentDescription="@string/piesek"
            app:srcCompat="@drawable/hi_dog"/>

</LinearLayout>